work section built

--- a/index.html
+++ b/index.html
@@ -4,24 +4,96 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <title>MINT</title>
+    <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
   	<link rel="stylesheet" type="text/css" href="assets/css/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/devicons.min.css" >
   </head>
   <body>
 
 
-  <header class="clearfix">
-    <div class="">
-      header go here
+  <header>
+    <div class="container">
+      <div class="name">
+        <h1>Zach Turner</h1>
+      </div>
+      <nav>
+        <ul class="main-menu">
+          <li>About</li>
+          <li>Work</li>
+        </ul>
+      </nav>
     </div>
   </header>
 
 
     <!-- BODY -->
 
-  <div class="">
-    body stuff goes here
+  <div class="container">
+    <section class="work">
+      <div class="row">
+        <div class="col-sm-12">
+          <h2>Work</h2>
+          <hr>
+          <div class="work-pieces">
+            <img class="img-responsive" src="assets/imgs/mint.jpg" alt="">
+            <div class="work-cpy">
+              <h3>The Mint</h3>
+              <!-- <h3>The Mint - <span class="work-descript">custom built WordPress website</span></h3> -->
+              <!-- <p>Custom WordPress website</p> -->
+              <a class="view-site" href="">view site</a>
+              <a class="view-site" href="">view code</a>
+              <p class="tech">Technologies Used</p>
+              <span class="devicons devicons-html5">
+              <span class="devicons devicons-css3">
+              <span class="devicons devicons-javascript">
+              <span class="devicons devicons-jquery">
+              <span class="devicons devicons-wordpress">
+              <span class="devicons devicons-php">
+            </div>
+          </div>
+          <div class="work-pieces">
+            <img class="img-responsive" src="assets/imgs/triple-ink.jpg" alt="">
+            <div class="work-cpy">
+              <h3>Triple Ink</h3>
+              <!-- <h3>The Mint - <span class="work-descript">custom built WordPress website</span></h3> -->
+              <!-- <p>Custom WordPress website</p> -->
+              <a class="view-site" href="">view site</a>
+              <a class="view-site" href="">view code</a>
+              <p class="tech">Technologies Used</p>
+              <span class="devicons devicons-html5">
+              <span class="devicons devicons-css3">
+              <span class="devicons devicons-javascript">
+              <span class="devicons devicons-jquery">
+              <span class="devicons devicons-wordpress">
+              <span class="devicons devicons-php">
+            </div>
+          </div>
+          <div class="work-pieces">
+            <img class="img-responsive" src="assets/imgs/calc.jpg" alt="">
+            <div class="work-cpy">
+              <h3>Corn Calculator</h3>
+              <a class="view-site" href="">view site</a>
+              <a class="view-site" href="">view code</a>
+              <p class="tech">Technologies Used</p>
+              <span class="devicons devicons-html5">
+              <span class="devicons devicons-css3">
+              <span class="devicons devicons-javascript">
+              <span class="devicons devicons-jquery">
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    </section>
+
+
+
+
+
+
   </div>
 
     <!-- FOOTER -->
