removed bootstrap for work section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="col-sm-12">
             <h2>Work</h2>
             <hr class="blue">
-            <div class="col-sm-4 work-pieces scroll-in">
+            <div class="work-pieces scroll-in">
               <img class="img-responsive" src="assets/imgs/themint-guy.jpg" alt="">
               <div class="work-cpy">
                 <h3>The Mint</h3>
@@ -73,7 +73,7 @@
                 <span class="devicons devicons-php"></span>
               </div>
             </div>
-            <div class="col-sm-4 work-pieces scroll-in">
+            <div class="work-pieces scroll-in">
               <img class="img-responsive" src="assets/imgs/new-triple.jpg" alt="">
               <div class="work-cpy">
                 <h3>Triple Ink</h3>
@@ -88,7 +88,7 @@
                 <span class="devicons devicons-php"></span>
               </div>
             </div>
-            <div class="col-sm-4 work-pieces scroll-in">
+            <div class="work-pieces scroll-in">
               <img class="img-responsive" src="assets/imgs/syngenta.jpg" alt="">
               <div class="work-cpy">
                 <h3>Syngenta Projects</h3>
