--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </div>
     </footer>
 
-    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="assets/js/jquery-3.1.0.min.js"></script>
   	<script src="assets/js/main.js"></script>
     <script src="assets/js/is-visible.js"></script>
 
