--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- BODY -->
 
     <div>
-      <div class="home-hero-holder" style="background-image: url('assets/imgs/bkg.jpg')"></div>
+      <div class="home-hero-holder" style="background-image: url('assets/imgs/newbkg.jpg')"></div>
     </div>
 
     <section id="about">
@@ -63,7 +63,7 @@
               <div class="work-cpy">
                 <h3>The Mint</h3>
                 <a class="view-site" href="https://thestudiomint.com/">view site</a>
-                <a class="view-site" href="">view code</a>
+                <a class="view-site" href="https://github.com/zturner2914/themint-wp">view code</a>
                 <p class="tech">Technologies Used</p>
                 <span class="devicons devicons-html5"></span>
                 <span class="devicons devicons-css3"></span>
@@ -78,7 +78,7 @@
               <div class="work-cpy">
                 <h3>Triple Ink</h3>
                 <a class="view-site" href="https://www.tripleink.com/">view site</a>
-                <a class="view-site" href="">view code</a>
+                <a class="view-site" href="https://github.com/zturner2914/tripleink-wp">view code</a>
                 <p class="tech">Technologies Used</p>
                 <span class="devicons devicons-html5"></span>
                 <span class="devicons devicons-css3"></span>
