minor a tags bugs fixed

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
               <img class="img-responsive" src="assets/imgs/themint-guy.jpg" alt="">
               <div class="work-cpy">
                 <h3>The Mint</h3>
-                <a class="view-site" href="https://thestudiomint.com/">view site</a>
-                <a class="view-site" href="https://github.com/zturner2914/themint-wp">view code</a>
+                <a target="_blank" class="view-site" href="https://thestudiomint.com/">view site</a>
+                <a target="_blank" class="view-site" href="https://github.com/zturner2914/themint-wp">view code</a>
                 <p class="tech">Technologies Used</p>
                 <span class="devicons devicons-html5"></span>
                 <span class="devicons devicons-css3"></span>
@@ -77,8 +77,8 @@
               <img class="img-responsive" src="assets/imgs/new-triple.jpg" alt="">
               <div class="work-cpy">
                 <h3>Triple Ink</h3>
-                <a class="view-site" href="https://www.tripleink.com/">view site</a>
-                <a class="view-site" href="https://github.com/zturner2914/tripleink-wp">view code</a>
+                <a target="_blank" class="view-site" href="https://www.tripleink.com/">view site</a>
+                <a target="_blank" class="view-site" href="https://github.com/zturner2914/tripleink-wp">view code</a>
                 <p class="tech">Technologies Used</p>
                 <span class="devicons devicons-html5"></span>
                 <span class="devicons devicons-css3"></span>
@@ -92,8 +92,8 @@
               <img class="img-responsive" src="assets/imgs/syngenta.jpg" alt="">
               <div class="work-cpy">
                 <h3>Syngenta Projects</h3>
-                <a class="view-site" href="">view site</a>
-                <a class="view-site" href="">view code</a>
+                <a target="_blank" class="view-site" href="">view site</a>
+                <a target="_blank" class="view-site" href="">view code</a>
                 <p class="tech">Technologies Used</p>
                 <span class="devicons devicons-html5"></span>
                 <span class="devicons devicons-css3"></span>
