--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bitter|Josefin+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
   	<link rel="stylesheet" type="text/css" href="assets/css/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="assets/css/devicons.min.css" >
@@ -18,16 +20,15 @@
     <header class="cleafix">
       <div class="custom-container cleafix">
         <div class="name">
-          Zach Turner
+          ZACH TURNER
         </div>
         <div class="mobile-menu visible-xs">
           <a href="#!" class="menu-icon"><span></span></a>
         </div>
         <nav class="cleafix">
           <ul class="main-menu">
-            <li><a href="#about">About</a></li>
-            <li><a href="#work-section">Work</a></li>
-            <li><a href="#contact-section">Contact</a></li>
+            <li><a target="_blank" href="assets/pdfs/resume.pdf">RESUME</a></li>
+            <li><a href="#work-section">WORK</a></li>
           </ul>
         </nav>
       </div>
@@ -35,9 +36,6 @@
 
     <!-- BODY -->
 
-    <div>
-      <div class="home-hero-holder" style="background-image: url('assets/imgs/newbkg.jpg')"></div>
-    </div>
 
     <section id="about">
         <div class="about-wrap">
@@ -56,8 +54,8 @@
       <section id="work-section" class="work">
         <div class="row">
           <div class="col-sm-12">
-            <h2>Work</h2>
-            <hr class="blue">
+            <!-- <h2>Work</h2> -->
+            <!-- <hr class="blue"> -->
             <div class="work-pieces scroll-in">
               <img class="img-responsive" src="assets/imgs/themint-guy.jpg" alt="">
               <div class="work-cpy">
@@ -102,6 +100,23 @@
               </div>
             </div>
           </div>
+          <div class="col-sm-12">
+            <div class="work-pieces scroll-in">
+              <img class="img-responsive" src="assets/imgs/patchery.jpg" alt="">
+              <div class="work-cpy">
+                <h3>The Patchery</h3>
+                <a target="_blank" class="view-site" href="https://limitless-cove-3511.herokuapp.com/">view site</a>
+                <a target="_blank" class="view-site" href="https://github.com/leex3694/thePatchery">view code</a>
+                <p class="tech">Technologies Used</p>
+                <span class="devicons devicons-html5"></span>
+                <span class="devicons devicons-css3"></span>
+                <span class="devicons devicons-javascript"></span>
+                <span class="devicons devicons-angular"></span>
+                <span class="devicons devicons-mongodb"></span>
+                <span class="devicons devicons-heroku"></span>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </div>
@@ -112,12 +127,12 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
-            <h2>Contact Me</h2>
+            <!-- <h2>Contact Me</h2> -->
             <hr>
             <div class="contact">
-              <p><a target="_blank" href="https://www.linkedin.com/in/zachary-turner-b9834b25">LinkedIn</a></p>
-              <p><a target="_blank" href="https://github.com/zturner2914">Github</a></p>
-              <p><a target="_blank" href="mailto:zturner29@gmail.com">zturner29@gmail.com</a></p>
+              <p><a target="_blank" href="https://github.com/zturner2914"><img src="assets/imgs/github.png" alt=""></a></p>
+              <p><a target="_blank" href="mailto:zturner29@gmail.com"><img src="assets/imgs/gmail.png" alt=""></a></p>
+              <p><a target="_blank" href="https://www.linkedin.com/in/zachary-turner-b9834b25"><img src="assets/imgs/linkedin.png" alt=""></a></p>
             </div>
           </div>
         </div>
