added duties/new resume

--- a/index.html
+++ b/index.html
@@ -60,43 +60,55 @@
               <img class="img-responsive" src="assets/imgs/themint-guy.jpg" alt="">
               <div class="work-cpy">
                 <h3>The Mint</h3>
+                <h4>Responsiblites</h4>
+                <p class="duties">Front end development | Wordpress intergration</p>
+                <h4>Technologies Used</h4>
+                <div>
+                  <span class="devicons devicons-html5"></span>
+                  <span class="devicons devicons-css3"></span>
+                  <span class="devicons devicons-javascript"></span>
+                  <span class="devicons devicons-jquery"></span>
+                  <span class="devicons devicons-wordpress"></span>
+                  <span class="devicons devicons-php"></span>
+                </div>
                 <a target="_blank" class="view-site" href="https://thestudiomint.com/">view site</a>
                 <a target="_blank" class="view-site" href="https://github.com/zturner2914/themint-wp">view code</a>
-                <p class="tech">Technologies Used</p>
-                <span class="devicons devicons-html5"></span>
-                <span class="devicons devicons-css3"></span>
-                <span class="devicons devicons-javascript"></span>
-                <span class="devicons devicons-jquery"></span>
-                <span class="devicons devicons-wordpress"></span>
-                <span class="devicons devicons-php"></span>
               </div>
             </div>
             <div class="work-pieces scroll-in">
               <img class="img-responsive" src="assets/imgs/new-triple.jpg" alt="">
               <div class="work-cpy">
                 <h3>Triple Ink</h3>
+                <h4>Responsiblites</h4>
+                <p class="duties">Front end development | Wordpress intergration</p>
+                <h4>Technologies Used</h4>
+                <div>
+                  <span class="devicons devicons-html5"></span>
+                  <span class="devicons devicons-css3"></span>
+                  <span class="devicons devicons-javascript"></span>
+                  <span class="devicons devicons-jquery"></span>
+                  <span class="devicons devicons-wordpress"></span>
+                  <span class="devicons devicons-php"></span>
+                </div>
                 <a target="_blank" class="view-site" href="https://www.tripleink.com/">view site</a>
                 <a target="_blank" class="view-site" href="https://github.com/zturner2914/tripleink-wp">view code</a>
-                <p class="tech">Technologies Used</p>
-                <span class="devicons devicons-html5"></span>
-                <span class="devicons devicons-css3"></span>
-                <span class="devicons devicons-javascript"></span>
-                <span class="devicons devicons-jquery"></span>
-                <span class="devicons devicons-wordpress"></span>
-                <span class="devicons devicons-php"></span>
               </div>
             </div>
             <div class="work-pieces scroll-in">
               <img class="img-responsive" src="assets/imgs/syngenta.jpg" alt="">
               <div class="work-cpy">
                 <h3>Syngenta Projects</h3>
-                <a target="_blank" class="view-site" href="">view site</a>
+                <h4>Responsiblites</h4>
+                <p class="duties">Front end development</p>
+                <h4>Technologies Used</h4>
+                <div>
+                  <span class="devicons devicons-html5"></span>
+                  <span class="devicons devicons-css3"></span>
+                  <span class="devicons devicons-javascript"></span>
+                  <span class="devicons devicons-jquery"></span>
+                </div>
+                <a target="_blank" class="view-site" href="http://www.syngenta-us.com/home.aspx">view site</a>
                 <a target="_blank" class="view-site" href="">view code</a>
-                <p class="tech">Technologies Used</p>
-                <span class="devicons devicons-html5"></span>
-                <span class="devicons devicons-css3"></span>
-                <span class="devicons devicons-javascript"></span>
-                <span class="devicons devicons-jquery"></span>
               </div>
             </div>
           </div>
@@ -105,15 +117,19 @@
               <img class="img-responsive" src="assets/imgs/patchery.jpg" alt="">
               <div class="work-cpy">
                 <h3>The Patchery</h3>
+                <h4>Responsiblites</h4>
+                <p class="duties">Front end development | Facebook OAuth</p>
+                <h4>Technologies Used</h4>
+                <div>
+                  <span class="devicons devicons-html5"></span>
+                  <span class="devicons devicons-css3"></span>
+                  <span class="devicons devicons-javascript"></span>
+                  <span class="devicons devicons-angular"></span>
+                  <span class="devicons devicons-mongodb"></span>
+                  <span class="devicons devicons-heroku"></span>
+                </div>
                 <a target="_blank" class="view-site" href="https://limitless-cove-3511.herokuapp.com/">view site</a>
                 <a target="_blank" class="view-site" href="https://github.com/leex3694/thePatchery">view code</a>
-                <p class="tech">Technologies Used</p>
-                <span class="devicons devicons-html5"></span>
-                <span class="devicons devicons-css3"></span>
-                <span class="devicons devicons-javascript"></span>
-                <span class="devicons devicons-angular"></span>
-                <span class="devicons devicons-mongodb"></span>
-                <span class="devicons devicons-heroku"></span>
               </div>
             </div>
           </div>
