minor updates to styles and links

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <section id="work-section" class="work">
         <div class="row">
           <div class="col-sm-12">
-            <!-- <h2>Work</h2> -->
-            <!-- <hr class="blue"> -->
+             <h2>Work</h2>
+             <hr class="blue">
             <div class="work-pieces scroll-in">
               <img class="img-responsive" src="assets/imgs/themint-guy.jpg" alt="">
               <div class="work-cpy">
@@ -108,7 +108,7 @@
                   <span class="devicons devicons-jquery"></span>
                 </div>
                 <a target="_blank" class="view-site" href="http://www.syngenta-us.com/home.aspx">view site</a>
-                <a target="_blank" class="view-site" href="">view code</a>
+                <a target="_blank" class="view-site" href="https://github.com/zturner2914/">view code</a>
               </div>
             </div>
           </div>
