--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <nav class="cleafix">
           <ul class="main-menu">
-            <li><a target="_blank" href="https://zturner2914.github.io/assets/pdfs/resume.pdf">RESUME</a></li>
+            <li><a target="_blank" href="https://zturner2914.github.io/assets/pdfs/Zach_Turner_Resume.pdf">RESUME</a></li>
             <li><a href="#work-section">WORK</a></li>
           </ul>
         </nav>
