--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="cleafix">
       <div class="custom-container cleafix">
         <div class="name">
-          ZACH TURNER
+          Zach Turner's Portfolio
         </div>
         <div class="mobile-menu visible-xs">
           <a href="#!" class="menu-icon"><span></span></a>
@@ -38,12 +38,18 @@
 
 
     <section id="about">
+      <!-- <div class="hero-background-cover">
+        <img src="assets/imgs/hero-bg.jpeg" alt="bg hero">
+      </div> -->
         <div class="about-wrap">
+          
           <div class="container">
             <div class="row">
               <div class="col-sm-12">
-                <h1>Web developer, music lover, and lifelong learner.</h1>
-                <p>View my code on <a target="_blank" href="https://github.com/zturner2914"><span class="link-underline">Github</span></a>, connnect with me on <a target="_blank" href="https://www.linkedin.com/in/zachary-turner-b9834b25"><span class="link-underline">LinkedIn</span></a>, and check out my work below</p>
+                <div class="hero-text-bg">
+                  <h1>Web developer, music lover, and lifelong learner.</h1>
+                  <p>View my code on <a target="_blank" href="https://github.com/zturner2914"><span class="link-underline">Github</span></a>, connnect with me on <a target="_blank" href="https://www.linkedin.com/in/zachary-turner-b9834b25"><span class="link-underline">LinkedIn</span></a>, and check out my work below</p>
+                </div>
               </div>
           </div>
         </div>
@@ -144,7 +150,7 @@
         <div class="row">
           <div class="col-sm-12">
             <!-- <h2>Contact Me</h2> -->
-            <hr>
+            
             <div class="contact">
               <p><a target="_blank" href="https://github.com/zturner2914"><img src="assets/imgs/github.png" alt=""></a></p>
               <p><a target="_blank" href="mailto:zturner29@gmail.com"><img src="assets/imgs/gmail.png" alt=""></a></p>
